--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 
         // --- GEMINI AI INTEGRATION ---
         // ⚠️ IMPORTANTE: COLOCA TU API KEY AQUÍ PARA QUE EL AGENTE FUNCIONE
-        const apiKey = ""; // <--- PEGA TU API KEY DENTRO DE LAS COMILLAS
+        const apiKey = "AIzaSyBBsngTu6zpppL39pAsk0eIUPCFm0n8KZs"; // <--- PEGA TU API KEY DENTRO DE LAS COMILLAS
 
         async function generateAIAnalysis() {
             const btn = document.querySelector('.btn-ai-action');
