--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
             color: white;
             padding: 36px 32px;
             border-radius: var(--radius-xl);
-            margin-bottom: 28px;
+            margin-bottom: 36px;
             box-shadow: var(--shadow-lg), var(--shadow-glow);
             position: relative;
             overflow: hidden;
@@ -419,14 +419,14 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 20px;
-            margin-bottom: 28px;
+            margin-bottom: 32px;
         }
 
         .mini-stat {
-            background: var(--bg-surface);
+            background: var(--bg-body);
             padding: 24px;
             border-radius: var(--radius-lg);
-            box-shadow: var(--shadow-sm);
+            box-shadow: var(--shadow-xs);
             border: 1px solid rgba(148, 163, 184, 0.08);
             display: flex;
             flex-direction: column;
@@ -435,7 +435,7 @@
         }
 
         .mini-stat:hover {
-            box-shadow: var(--shadow-md);
+            box-shadow: var(--shadow-sm);
             transform: translateY(-3px);
         }
 
@@ -479,7 +479,7 @@
             padding: 24px;
             border-radius: var(--radius-lg);
             border: 1px solid rgba(148, 163, 184, 0.1);
-            margin-bottom: 24px;
+            margin-bottom: 32px;
         }
 
         [data-theme="dark"] .advanced-filters {
