--- a/index.html
+++ b/index.html
@@ -914,6 +914,77 @@
             border-bottom: none;
         }
 
+        @media (max-width: 768px) {
+            .table-container {
+                border: none;
+                overflow: visible;
+            }
+
+            .table-container table {
+                font-size: 0.9rem;
+            }
+
+            .table-container thead {
+                display: none;
+            }
+
+            .table-container table,
+            .table-container tbody,
+            .table-container tr,
+            .table-container td {
+                display: block;
+                width: 100%;
+            }
+
+            .table-container tr {
+                background: var(--bg-surface);
+                border: 1px solid rgba(148, 163, 184, 0.18);
+                border-radius: var(--radius-md);
+                box-shadow: var(--shadow-xs);
+                margin-bottom: 14px;
+                overflow: hidden;
+            }
+
+            .table-container td {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                gap: 12px;
+                padding: 12px 16px;
+                border-bottom: 1px solid rgba(148, 163, 184, 0.12);
+            }
+
+            .table-container td::before {
+                content: "";
+                font-weight: 600;
+                text-transform: uppercase;
+                font-size: 0.72rem;
+                letter-spacing: 0.05em;
+                color: var(--text-muted);
+            }
+
+            .table-container td:nth-child(1)::before { content: "Fecha"; }
+            .table-container td:nth-child(2)::before { content: "Tipo"; }
+            .table-container td:nth-child(3)::before { content: "Método"; }
+            .table-container td:nth-child(4)::before { content: "Categoría"; }
+            .table-container td:nth-child(5)::before { content: "Descripción"; }
+            .table-container td:nth-child(6)::before { content: "Monto"; }
+            .table-container td:nth-child(7)::before { content: "Acciones"; }
+
+            .table-container td:last-child {
+                border-bottom: none;
+                justify-content: flex-start;
+            }
+
+            .table-container td:last-child::before {
+                flex: 0 0 auto;
+            }
+
+            .table-container td:last-child .btn-icon-action {
+                margin-right: 8px;
+            }
+        }
+
         .btn-icon-action {
             background: none;
             border: none;
