Style active mobile nav link

--- a/index.html
+++ b/index.html
@@ -1122,8 +1122,10 @@
         }
 
         .mob-link.active {
+            background: linear-gradient(135deg, rgba(80, 70, 229, 0.1) 0%, rgba(14, 165, 233, 0.05) 100%);
             color: var(--primary);
             font-weight: 600;
+            border-radius: var(--radius-sm);
         }
 
         .mob-link.active::before {
