--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
 
         .filter-control {
             padding: 12px 16px;
-            border: 1px solid rgba(148, 163, 184, 0.2);
+            border: 1px solid rgba(148, 163, 184, 0.45);
             border-radius: var(--radius-md);
             font-size: 0.9rem;
             width: 100%;
@@ -521,12 +521,18 @@
 
         .filter-control:focus {
             border-color: var(--primary);
-            box-shadow: 0 0 0 3px rgba(80, 70, 229, 0.1);
+            box-shadow: 0 0 0 4px rgba(80, 70, 229, 0.25);
+            outline: none;
+        }
+
+        .filter-control:focus-visible {
+            border-color: var(--primary);
+            box-shadow: 0 0 0 4px rgba(80, 70, 229, 0.35);
             outline: none;
         }
 
         [data-theme="dark"] .filter-control {
-            border-color: rgba(148, 163, 184, 0.2);
+            border-color: rgba(226, 232, 240, 0.4);
             background: var(--bg-body);
         }
 
