--- a/index.html
+++ b/index.html
@@ -348,6 +348,10 @@
             padding: 32px;
             max-width: 1280px;
             margin: 0 auto;
+            margin-bottom: 32px;
+            display: flex;
+            flex-direction: column;
+            gap: 28px;
             position: relative;
             z-index: 1;
         }
@@ -413,7 +417,7 @@
         }
 
         .hero-amount {
-            font-size: 2.75rem;
+            font-size: 2.9rem;
             font-weight: 800;
             letter-spacing: -0.03em;
             position: relative;
@@ -428,7 +432,7 @@
         }
 
         .mini-stat {
-            background: var(--bg-body);
+            background: var(--bg-surface);
             padding: 24px;
             border-radius: var(--radius-lg);
             box-shadow: var(--shadow-xs);
@@ -440,8 +444,8 @@
         }
 
         .mini-stat:hover {
-            box-shadow: var(--shadow-sm);
-            transform: translateY(-3px);
+            box-shadow: var(--shadow-xs);
+            transform: translateY(-1px);
         }
 
         [data-theme="dark"] .mini-stat {
@@ -1420,6 +1424,8 @@
 
             .content-container {
                 padding: 20px;
+                gap: 24px;
+                margin-bottom: 24px;
             }
 
             .add-card-form {
@@ -1431,7 +1437,7 @@
             }
 
             .hero-amount {
-                font-size: 2.25rem;
+                font-size: 2.35rem;
             }
 
             .card {
