--- a/index.html
+++ b/index.html
@@ -1400,6 +1400,52 @@
             border-color: rgba(148, 163, 184, 0.1);
         }
 
+        @media (max-width: 1024px) {
+            :root {
+                --nav-width: 96px;
+            }
+
+            .sidebar {
+                align-items: center;
+            }
+
+            .brand {
+                justify-content: center;
+                padding: 0;
+                font-size: 0;
+            }
+
+            .brand i {
+                margin-right: 0;
+            }
+
+            .nav-links {
+                padding: 20px 8px;
+                align-items: center;
+            }
+
+            .nav-item {
+                justify-content: center;
+                gap: 0;
+                font-size: 0;
+                padding: 12px 0;
+                width: 100%;
+            }
+
+            .nav-item i {
+                font-size: 1.2rem;
+            }
+
+            .theme-toggle {
+                justify-content: center;
+                padding: 12px 0;
+            }
+
+            .theme-toggle span {
+                display: none;
+            }
+        }
+
         @media (max-width: 768px) {
             .sidebar {
                 display: none;
