--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
 
         .filter-control {
             padding: 12px 16px;
-            border: 1px solid rgba(148, 163, 184, 0.45);
+            border: 1px solid rgba(71, 85, 105, 0.75);
             border-radius: var(--radius-md);
             font-size: 0.9rem;
             width: 100%;
@@ -529,19 +529,20 @@
         }
 
         .filter-control:focus {
-            border-color: var(--primary);
-            box-shadow: 0 0 0 4px rgba(80, 70, 229, 0.25);
+            border-color: #1d4ed8;
+            box-shadow: 0 0 0 4px rgba(29, 78, 216, 0.3);
             outline: none;
         }
 
         .filter-control:focus-visible {
-            border-color: var(--primary);
-            box-shadow: 0 0 0 4px rgba(80, 70, 229, 0.35);
-            outline: none;
+            border-color: #1d4ed8;
+            box-shadow: 0 0 0 4px rgba(29, 78, 216, 0.5);
+            outline: 2px solid rgba(29, 78, 216, 0.8);
+            outline-offset: 2px;
         }
 
         [data-theme="dark"] .filter-control {
-            border-color: rgba(226, 232, 240, 0.4);
+            border-color: rgba(226, 232, 240, 0.7);
             background: var(--bg-body);
         }
 
@@ -878,12 +879,41 @@
         }
 
         .btn-primary:hover {
-            box-shadow: var(--shadow-md);
+            box-shadow: 0 0 0 3px rgba(30, 64, 175, 0.35), var(--shadow-md);
             transform: translateY(-2px);
+            filter: brightness(1.05);
+        }
+
+        .btn-primary:focus-visible {
+            outline: 3px solid rgba(30, 64, 175, 0.85);
+            outline-offset: 2px;
+            box-shadow: 0 0 0 4px rgba(30, 64, 175, 0.4);
         }
 
         .btn-primary:active {
             transform: translateY(0);
+        }
+
+        .btn-secondary {
+            background: var(--bg-body);
+            color: var(--text-primary);
+            padding: 14px 28px;
+            border-radius: var(--radius-md);
+            font-weight: 600;
+            border: 1px solid rgba(71, 85, 105, 0.6);
+            transition: all var(--transition-fast);
+        }
+
+        .btn-secondary:hover {
+            background: rgba(148, 163, 184, 0.18);
+            border-color: rgba(51, 65, 85, 0.8);
+            box-shadow: 0 0 0 3px rgba(51, 65, 85, 0.25);
+        }
+
+        .btn-secondary:focus-visible {
+            outline: 3px solid rgba(51, 65, 85, 0.85);
+            outline-offset: 2px;
+            box-shadow: 0 0 0 4px rgba(51, 65, 85, 0.35);
         }
 
         .btn-cancel {
