--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
             --transition-fast: 150ms ease;
             --transition-base: 250ms ease;
             --transition-slow: 350ms cubic-bezier(0.4, 0, 0.2, 1);
+
+            --surface-padding: 24px;
+            --card-padding: 28px;
         }
 
         [data-theme="dark"] {
@@ -345,13 +348,14 @@
         }
 
         .content-container {
+            --section-gap: 28px;
             padding: 32px;
             max-width: 1280px;
             margin: 0 auto;
             margin-bottom: 32px;
             display: flex;
             flex-direction: column;
-            gap: 28px;
+            gap: var(--section-gap);
             position: relative;
             z-index: 1;
         }
@@ -359,7 +363,7 @@
         .card {
             background: var(--bg-surface);
             border-radius: var(--radius-lg);
-            padding: 28px;
+            padding: var(--card-padding);
             margin-bottom: 24px;
             box-shadow: var(--shadow-sm);
             border: 1px solid rgba(148, 163, 184, 0.08);
@@ -433,7 +437,7 @@
 
         .mini-stat {
             background: var(--bg-surface);
-            padding: 24px;
+            padding: var(--surface-padding);
             border-radius: var(--radius-lg);
             box-shadow: var(--shadow-xs);
             border: 1px solid rgba(148, 163, 184, 0.08);
@@ -485,7 +489,7 @@
 
         .advanced-filters {
             background: var(--bg-body);
-            padding: 24px;
+            padding: var(--surface-padding);
             border-radius: var(--radius-lg);
             border: 1px solid rgba(148, 163, 184, 0.1);
             margin-bottom: 32px;
@@ -1499,8 +1503,8 @@
             }
 
             .content-container {
+                --section-gap: 24px;
                 padding: 20px;
-                gap: 24px;
                 margin-bottom: 24px;
             }
 
@@ -1517,7 +1521,7 @@
             }
 
             .card {
-                padding: 20px;
+                padding: var(--surface-padding);
             }
         }
 
