--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         }
 
         .page-title {
-            font-size: 1.35rem;
+            font-size: clamp(1.1rem, 1.6vw, 1.35rem);
             font-weight: 700;
             color: var(--text-primary);
             letter-spacing: -0.02em;
@@ -421,7 +421,7 @@
         }
 
         .hero-amount {
-            font-size: 2.9rem;
+            font-size: clamp(2.1rem, 3.5vw, 2.9rem);
             font-weight: 800;
             letter-spacing: -0.03em;
             position: relative;
@@ -473,7 +473,7 @@
         }
 
         .mini-value {
-            font-size: 1.4rem;
+            font-size: clamp(1.1rem, 1.6vw, 1.4rem);
             font-weight: 700;
             color: var(--text-primary);
             letter-spacing: -0.02em;
@@ -1517,11 +1517,23 @@
             }
 
             .hero-amount {
-                font-size: 2.35rem;
+                font-size: clamp(1.9rem, 6vw, 2.35rem);
             }
 
             .card {
                 padding: var(--surface-padding);
+            }
+
+            .hero-title {
+                font-size: 0.8rem;
+            }
+
+            .mini-label {
+                font-size: 0.7rem;
+            }
+
+            .date-filter-pill {
+                font-size: 0.8rem;
             }
         }
 
