--- a/index.html
+++ b/index.html
@@ -579,6 +579,14 @@
         .btn-clear:hover {
             background: rgba(148, 163, 184, 0.1);
             color: var(--text-secondary);
+            box-shadow: 0 6px 16px rgba(15, 23, 42, 0.08);
+            transform: translateY(-1px);
+        }
+
+        .btn-clear:focus-visible {
+            outline: 2px solid rgba(100, 116, 139, 0.9);
+            outline-offset: 2px;
+            box-shadow: 0 0 0 4px rgba(100, 116, 139, 0.35);
         }
         
         .filter-summary {
@@ -880,18 +888,19 @@
             font-size: 1rem;
             box-shadow: var(--shadow-sm);
             transition: all var(--transition-base);
+            text-shadow: 0 1px 1px rgba(15, 23, 42, 0.25);
         }
 
         .btn-primary:hover {
-            box-shadow: 0 0 0 3px rgba(30, 64, 175, 0.35), var(--shadow-md);
+            box-shadow: 0 10px 20px rgba(30, 64, 175, 0.25), 0 0 0 3px rgba(30, 64, 175, 0.3);
             transform: translateY(-2px);
-            filter: brightness(1.05);
+            filter: brightness(1.07) saturate(1.05);
         }
 
         .btn-primary:focus-visible {
             outline: 3px solid rgba(30, 64, 175, 0.85);
             outline-offset: 2px;
-            box-shadow: 0 0 0 4px rgba(30, 64, 175, 0.4);
+            box-shadow: 0 0 0 4px rgba(30, 64, 175, 0.45), 0 8px 18px rgba(30, 64, 175, 0.25);
         }
 
         .btn-primary:active {
@@ -899,25 +908,26 @@
         }
 
         .btn-secondary {
-            background: var(--bg-body);
-            color: var(--text-primary);
+            background: var(--bg-surface);
+            color: var(--text-secondary);
             padding: 14px 28px;
             border-radius: var(--radius-md);
             font-weight: 600;
-            border: 1px solid rgba(71, 85, 105, 0.6);
+            border: 1px solid rgba(71, 85, 105, 0.4);
             transition: all var(--transition-fast);
         }
 
         .btn-secondary:hover {
-            background: rgba(148, 163, 184, 0.18);
-            border-color: rgba(51, 65, 85, 0.8);
-            box-shadow: 0 0 0 3px rgba(51, 65, 85, 0.25);
+            background: rgba(148, 163, 184, 0.14);
+            border-color: rgba(51, 65, 85, 0.7);
+            box-shadow: 0 8px 18px rgba(15, 23, 42, 0.12);
+            transform: translateY(-1px);
         }
 
         .btn-secondary:focus-visible {
             outline: 3px solid rgba(51, 65, 85, 0.85);
             outline-offset: 2px;
-            box-shadow: 0 0 0 4px rgba(51, 65, 85, 0.35);
+            box-shadow: 0 0 0 4px rgba(51, 65, 85, 0.35), 0 8px 18px rgba(15, 23, 42, 0.12);
         }
 
         .btn-cancel {
@@ -933,6 +943,14 @@
         .btn-cancel:hover {
             background: rgba(148, 163, 184, 0.1);
             color: var(--text-primary);
+            box-shadow: 0 6px 16px rgba(15, 23, 42, 0.08);
+            transform: translateY(-1px);
+        }
+
+        .btn-cancel:focus-visible {
+            outline: 2px solid rgba(100, 116, 139, 0.85);
+            outline-offset: 2px;
+            box-shadow: 0 0 0 4px rgba(100, 116, 139, 0.3);
         }
         
         .table-container {
