Adjust mobile button sizing

--- a/index.html
+++ b/index.html
@@ -1558,6 +1558,24 @@
                 grid-template-columns: repeat(2, minmax(140px, 1fr));
                 gap: 12px;
             }
+
+            .btn-primary,
+            .btn-secondary,
+            .btn-ai-action,
+            .btn-icon-action {
+                font-size: 1.05rem;
+                min-height: 44px;
+            }
+
+            .btn-primary,
+            .btn-secondary,
+            .btn-ai-action {
+                padding: 16px 32px;
+            }
+
+            .btn-icon-action {
+                padding: 10px 12px;
+            }
         }
 
         @media (max-width: 480px) {
