--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
             transition: background-color var(--transition-base), color var(--transition-base);
         }
 
+        @media (prefers-reduced-motion: reduce) {
+            *, *::before, *::after {
+                animation: none !important;
+                transition: none !important;
+                scroll-behavior: auto !important;
+            }
+        }
+
         .sidebar {
             width: var(--nav-width);
             background: var(--bg-surface);
@@ -367,7 +375,7 @@
             margin-bottom: 24px;
             box-shadow: var(--shadow-sm);
             border: 1px solid rgba(148, 163, 184, 0.08);
-            transition: all var(--transition-base);
+            transition: all var(--transition-fast);
         }
 
         .card:hover {
@@ -444,7 +452,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            transition: all var(--transition-base);
+            transition: all var(--transition-fast);
         }
 
         .mini-stat:hover {
@@ -681,7 +689,7 @@
             cursor: pointer;
             font-size: 1rem;
             box-shadow: var(--shadow-lg);
-            transition: all var(--transition-base);
+            transition: all var(--transition-fast);
             display: inline-flex;
             align-items: center;
             gap: 10px;
@@ -887,7 +895,7 @@
             width: 100%;
             font-size: 1rem;
             box-shadow: var(--shadow-sm);
-            transition: all var(--transition-base);
+            transition: all var(--transition-fast);
             text-shadow: 0 1px 1px rgba(15, 23, 42, 0.25);
         }
 
@@ -1245,7 +1253,7 @@
             box-shadow: var(--shadow-lg), 0 0 20px -5px rgba(80, 70, 229, 0.5);
             cursor: pointer;
             z-index: 100;
-            transition: all var(--transition-base);
+            transition: all var(--transition-fast);
             border: none;
         }
 
@@ -1358,7 +1366,7 @@
             border-radius: var(--radius-md);
             font-size: 1.5rem;
             cursor: pointer;
-            transition: all 0.2s ease;
+            transition: all var(--transition-fast);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -1406,7 +1414,7 @@
             font-weight: 500;
             color: var(--text-primary);
             cursor: pointer;
-            transition: all 0.2s ease;
+            transition: all var(--transition-fast);
             background: transparent;
             border: none;
         }
@@ -1676,7 +1684,7 @@
             border-radius: var(--radius-lg);
             margin-bottom: 16px;
             background: var(--bg-surface);
-            transition: all var(--transition-base);
+            transition: all var(--transition-fast);
         }
 
         .goal-card:hover {
@@ -1759,7 +1767,7 @@
             border-radius: var(--radius-lg);
             border: 1px solid rgba(148, 163, 184, 0.08);
             text-align: center;
-            transition: all var(--transition-base);
+            transition: all var(--transition-fast);
         }
 
         .member-card:hover {
