--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
         .nav-item:hover {
             background: rgba(80, 70, 229, 0.06);
             color: var(--primary);
-            transform: translateX(4px);
+            transform: translateX(1px);
+            box-shadow: 0 4px 10px rgba(15, 23, 42, 0.08);
         }
 
         .nav-item:hover::before {
@@ -456,7 +457,7 @@
         }
 
         .mini-stat:hover {
-            box-shadow: var(--shadow-xs);
+            box-shadow: 0 6px 14px rgba(15, 23, 42, 0.08);
             transform: translateY(-1px);
         }
 
